AGREGE TABLE NUEVA

--- a/tabla.html
+++ b/tabla.html
@@ -56,10 +56,11 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
+    <td>GERMAN TUANI  Rovelli</td>
     <td>Italy</td>
   </tr>
 </table>
+
 
 </body>
 </html>
